<resources>
    <string name="app_name">Coder\'s Clock</string>
    <string name="all_upcoming_competitions">All Upcoming Competitions</string>
    <string name="codechef">CodeChef</string>
    <string name="codeforces">Codeforces</string>
    <string name="hackerrank">Hackerrank</string>
    <string name="leetcode">Leetcode</string>
    <string name="hackerearth">Hackerearth</string>
    <string name="problem_solving_timer">Upcoming Reminders</string>
</resources>